Get items schema updated (Marshmallow and OpenAPI)
