# aquascope/webserver/schema/items.py
@@ -4,6 +4,7 @@ from aquascope.webserver.schema.custom_fields import (List, NullableBoolean,
                                                       LowercaseNullableString, NullableString)
 from aquascope.webserver.schema.custom_schema import (CustomSchema, FormattedValidationError)
 
+
 class PostItemSchema(CustomSchema):
 
     id = fields.String(data_key='_id', attribute='_id', required=True)
@@ -157,16 +158,43 @@ class GetItemsSchema(CustomSchema):
     acquisition_time_start = fields.DateTime(required=False)
     acquisition_time_end = fields.DateTime(required=False)
 
-    eating = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    with_eggs = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
     dividing = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
     dead = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
-    with_epiphytes = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    with_epibiont = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    with_parasite = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
     broken = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
     colony = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    cluster = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    eating = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
     multiple_species = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
-    cropped = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    partially_cropped = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
     male = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
     female = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
     juvenile = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
     adult = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
-    with_eggs = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    ephippium = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    resting_egg = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    heterocyst = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    akinete = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    with_spines = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    beatles = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    stones = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    zeppelin = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    floyd = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    acdc = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    hendrix = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    alan_parsons = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    allman = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    dire_straits = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    eagles = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    guns = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    purple = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    van_halen = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    skynyrd = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    zz_top = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    iron = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    police = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    moore = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    inxs = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
+    chilli_peppers = List(NullableBoolean(allow_none=True), allow_none=True, required=False)
